apps/matrix/bridges/signal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix-signal
spec:
  ports:
    - port: 29328
      name: appservice
    - port: 8000
      name: metrics
  selector:
    app: matrix-signal
    component: matrix
